# SimpleMan

./: ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
icons/: sm_icon320.xpm
src/: Makefile.am  Makefile.in  Makefile.orig  sm_ftp.cpp  sm_ftp.h  sm_http.cpp  sm_http.h  sm_main.cpp  sm_model_c.cpp  sm_model_c.h  sm_model_l.cpp  sm_model_l.h  sm_model_r.cpp  sm_model_r.h  sm_msg.cpp  sm_msg.h  sm_net.cpp  sm_net.h  sm_new.cpp  sm_new.h  sm_pref.cpp  sm_pref.h  sm_service.cpp  sm_service.h  sm_service.xml  sm_service_dbus.h  sm_socket.cpp  sm_socket.h  sm_store.h  sm_struct.h  sm_util.cpp  sm_util.h  sm_win.cpp  sm_win.h
